// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders the pagination component with correct number of pages with ellipsis 1`] = `
<nav
  aria-label="pagination"
  class="ds:inline-flex ds:list-none ds:items-center ds:justify-center ds:gap-3"
  data-part="root"
  data-scope="pagination"
  data-testid="pagination"
  dir="ltr"
  id="pagination:_r_1_"
>
  <button
    aria-label="Previous"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:disabled:text-inactive-gray ds:disabled:cursor-not-allowed ds:bg-bg-gray-2 ds:text-primary-gray"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination:_r_1_:prev"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 18.2964L8 12.2964L14 6.29639L15.4 7.69639L10.8 12.2964L15.4 16.8964L14 18.2964Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-current="page"
    aria-label="page 1"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-secondary-1-dark ds:text-white ds:font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination:_r_1_:item:1"
    type="button"
  >
    1
  </button>
  <button
    aria-label="page 2"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:item:2"
    type="button"
  >
    2
  </button>
  <button
    aria-label="page 3"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:item:3"
    type="button"
  >
    3
  </button>
  <button
    aria-label="page 4"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:item:4"
    type="button"
  >
    4
  </button>
  <button
    aria-label="page 5"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="5"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:item:5"
    type="button"
  >
    5
  </button>
  <div
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-default ds:bg-bg-gray-2 ds:text-primary-gray"
    data-part="ellipsis"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:ellipsis:5"
  >
    <svg
      class="ds:rotate-90"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 20.2964C11.45 20.2964 10.9792 20.1006 10.5875 19.7089C10.1958 19.3172 10 18.8464 10 18.2964C10 17.7464 10.1958 17.2756 10.5875 16.8839C10.9792 16.4922 11.45 16.2964 12 16.2964C12.55 16.2964 13.0208 16.4922 13.4125 16.8839C13.8042 17.2756 14 17.7464 14 18.2964C14 18.8464 13.8042 19.3172 13.4125 19.7089C13.0208 20.1006 12.55 20.2964 12 20.2964ZM12 14.2964C11.45 14.2964 10.9792 14.1006 10.5875 13.7089C10.1958 13.3172 10 12.8464 10 12.2964C10 11.7464 10.1958 11.2756 10.5875 10.8839C10.9792 10.4922 11.45 10.2964 12 10.2964C12.55 10.2964 13.0208 10.4922 13.4125 10.8839C13.8042 11.2756 14 11.7464 14 12.2964C14 12.8464 13.8042 13.3172 13.4125 13.7089C13.0208 14.1006 12.55 14.2964 12 14.2964ZM12 8.29639C11.45 8.29639 10.9792 8.10055 10.5875 7.70889C10.1958 7.31722 10 6.84639 10 6.29639C10 5.74639 10.1958 5.27555 10.5875 4.88389C10.9792 4.49222 11.45 4.29639 12 4.29639C12.55 4.29639 13.0208 4.49222 13.4125 4.88389C13.8042 5.27555 14 5.74639 14 6.29639C14 6.84639 13.8042 7.31722 13.4125 7.70889C13.0208 8.10055 12.55 8.29639 12 8.29639Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <button
    aria-label="last page, page 10"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="10"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:item:10"
    type="button"
  >
    10
  </button>
  <button
    aria-label="Next"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_1_:next"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.6 12.2964L8 7.69639L9.4 6.29639L15.4 12.2964L9.4 18.2964L8 16.8964L12.6 12.2964Z"
        fill="currentColor"
      />
    </svg>
  </button>
</nav>
`;

exports[`Pagination > renders the pagination component with correct number of pages without ellipsis 1`] = `
<nav
  aria-label="pagination"
  class="ds:inline-flex ds:list-none ds:items-center ds:justify-center ds:gap-3"
  data-part="root"
  data-scope="pagination"
  data-testid="pagination"
  dir="ltr"
  id="pagination:_r_0_"
>
  <button
    aria-label="Previous"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:disabled:text-inactive-gray ds:disabled:cursor-not-allowed ds:bg-bg-gray-2 ds:text-primary-gray"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination:_r_0_:prev"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 18.2964L8 12.2964L14 6.29639L15.4 7.69639L10.8 12.2964L15.4 16.8964L14 18.2964Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-current="page"
    aria-label="page 1"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-secondary-1-dark ds:text-white ds:font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination:_r_0_:item:1"
    type="button"
  >
    1
  </button>
  <button
    aria-label="page 2"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_0_:item:2"
    type="button"
  >
    2
  </button>
  <button
    aria-label="page 3"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_0_:item:3"
    type="button"
  >
    3
  </button>
  <button
    aria-label="last page, page 4"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray ds:font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_0_:item:4"
    type="button"
  >
    4
  </button>
  <button
    aria-label="Next"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-primary-gray"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination:_r_0_:next"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.6 12.2964L8 7.69639L9.4 6.29639L15.4 12.2964L9.4 18.2964L8 16.8964L12.6 12.2964Z"
        fill="currentColor"
      />
    </svg>
  </button>
</nav>
`;
